fix spacing

--- a/css/style2.css
+++ b/css/style2.css
@@ -33,7 +33,7 @@ font-size: 30pt;
 line-height: 34pt;
 font-family: 'Playfair Display', serif;}
 
-h3{font-size:18pt;
+h3{font-size:22pt;
 line-height:28pt;
 font-weight: 300;
 color:#fff;
